[gd_scene load_steps=4 format=3 uid="uid://b4tsq8qduuri3"]

[ext_resource type="Script" path="res://WCST/wcst_view.gd" id="1_kjtxl"]
[ext_resource type="PackedScene" uid="uid://opf7a7arsd0d" path="res://WCST/evidence_card.tscn" id="2_5hku3"]
[ext_resource type="PackedScene" uid="uid://0kilfxylb0sh" path="res://WCST/evidence_trial_card.tscn" id="3_p7hyo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kjtxl")

[node name="Tabletop" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 651.0
color = Color(0.292946, 0.22045, 0.127207, 1)

[node name="Timer" type="Timer" parent="."]

[node name="base_card_1" parent="." instance=ExtResource("2_5hku3")]
position = Vector2(213, 46)

[node name="base_card_2" parent="." instance=ExtResource("2_5hku3")]
position = Vector2(395, 44)

[node name="base_card_3" parent="." instance=ExtResource("2_5hku3")]
position = Vector2(575, 43)

[node name="base_card_4" parent="." instance=ExtResource("2_5hku3")]
visible = false
position = Vector2(756, 42)

[node name="trial_card" parent="." instance=ExtResource("3_p7hyo")]
position = Vector2(87, 339)

[node name="SessionBegin" type="ColorRect" parent="."]
offset_left = 402.0
offset_top = 234.0
offset_right = 730.0
offset_bottom = 401.0
color = Color(0.612013, 0.465525, 0.332168, 1)

[node name="Begin" type="Button" parent="SessionBegin"]
offset_left = 19.0
offset_top = 16.0
offset_right = 310.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 25
text = "Begin Session"

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 402.0
offset_top = 234.0
offset_right = 730.0
offset_bottom = 401.0
color = Color(0.612013, 0.465525, 0.332168, 1)

[node name="BeginPhase" type="Button" parent="ColorRect2"]
offset_left = 19.0
offset_top = 16.0
offset_right = 310.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 25
text = "Begin Phase 2"

[connection signal="pressed" from="SessionBegin/Begin" to="." method="_on_begin_pressed"]
[connection signal="pressed" from="ColorRect2/BeginPhase" to="." method="_on_begin_phase_pressed"]
